--- a/sites/travellingchair.net/themes/tchair_ohm/sass/partials/components/forms/_search-form.scss
+++ b/sites/travellingchair.net/themes/tchair_ohm/sass/partials/components/forms/_search-form.scss
@@ -2,13 +2,41 @@
  * $SEARCH-FORM
  */
 .views-exposed-form-search-page {
-  input, select {
+  padding: 0 1em;
+  input, select, .button {
     width: 100%;
   }
   .views-exposed-form .views-exposed-widget {
     float: none;
+    padding: 0.5em 0;
   }
-  .views-widget-filter-distance, .views-widget-filter-title, .checkboxFilter {
+  .views-submit-button {
+    margin-top: 1em;
+  }
+  .views-widget-filter-distance, .views-widget-filter-title, .checkboxFilter, [class*='views-widget-filter-field']:not([class*='views-widget-filter-field_category_tid']) {
     display: none;
+  }
+  @include at-breakpoint($tab) {
+    width: 80%;
+    margin: 0 auto;
+    padding: 0;
+
+    .button {
+      text-align: center;
+    }
+
+    .views-exposed-form .views-exposed-widget:not(.views-submit-button) {
+      @include span-columns(3, 12);
+      float: left;
+    }
+    .views-widget-filter-location_value label {
+      display: block;
+    }
+    .views-exposed-form .views-exposed-widget.views-submit-button {
+      @include span-columns(2, 12);
+      float: left;
+      line-height: 57px;
+      margin-top: 0;
+    }
   }
 }
