--- a/sites/travellingchair.net/themes/tchair_ohm/sass/layouts/ohm-hero/ohm-hero-layout.scss
+++ b/sites/travellingchair.net/themes/tchair_ohm/sass/layouts/ohm-hero/ohm-hero-layout.scss
@@ -18,9 +18,24 @@ body {
 .l-header {
   background-color: $light-blue;
 }
+
+/* Header */
+.l-branding {
+  @include span-columns(9, 12);
+}
 .l-region--header {
-  .block {
+  @include span-columns(12, 12);
+  display: none;
+  border-top: 1px solid $dark-blue;
+}
+.l-region--navigation {
+  @include span-columns(3 omega, 12);
+  a#mob-menu {
     float: right;
+    width: 60px;
+    height: 80px;
+    border-left: 1px solid $dark-blue;
+    background: image-url('menu-icon.png') center center no-repeat;
   }
 }
 
@@ -28,12 +43,13 @@ body {
 .l-highlighted-wrapper {
   padding: $vert-spacing-unit 0;
   background: #FFF;
+  margin-bottom: $vert-spacing-unit;
 }
 .l-region--help {
   margin-bottom: $vert-spacing-unit;
 }
 .l-main {
-  margin-top: 2 * $vert-spacing-unit;
+  margin-top: 0;
   margin-bottom: 2 * $vert-spacing-unit;
 }
 
@@ -48,6 +64,7 @@ body {
 .l-footer-wrapper {
   padding: $vert-spacing-unit 0;
   background: #FFF;
+  display: none;
 }
 
 @include at-breakpoint($tab) {
@@ -61,9 +78,14 @@ body {
   }
   .l-region--navigation {
     @include span-columns(0, 12);
+    display: none;
   }
   .l-region--header {
     @include span-columns(5 omega, 12);
+    display: block;
+    .block {
+      float: right;
+    }
   }
 
   /* Sidebars */
@@ -77,6 +99,9 @@ body {
       @include span-columns(4 omega, 12);
       clear: right;
     }
+  }
+  .l-footer-wrapper {
+    display: block;
   }
 }
 
