--- a/sites/travellingchair.net/themes/tchair_ohm/sass/partials/components/misc/_site-branding.scss
+++ b/sites/travellingchair.net/themes/tchair_ohm/sass/partials/components/misc/_site-branding.scss
@@ -14,7 +14,7 @@
 .site-branding__logo {
   width: 60px;
   height: 66px;
-  margin-right: $horz-spacing-unit;
+  margin-right: $horz-spacing-unit /2;
 }
 .site-branding__name {
   @extend .beta;
