--- a/sites/travellingchair.net/themes/tchair_ohm/sass/layouts/ohm-hero/ohm-hero-layout.scss
+++ b/sites/travellingchair.net/themes/tchair_ohm/sass/layouts/ohm-hero/ohm-hero-layout.scss
@@ -32,7 +32,7 @@ body {
   @include span-columns(3 omega, 12);
   a#mob-menu {
     float: right;
-    width: 60px;
+    width: 100%;
     height: 80px;
     border-left: 1px solid $dark-blue;
     background: image-url('menu-icon.png') center center no-repeat;
